updated dependencies and webpack

--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "i18next": "^3.5.1",
     "immutability-helper": "^2.2.2",
     "json-loader": "^0.5.4",
-    "vortex-api": "Nexus-Mods/vortex-api",
-    "vortex-parse-ini": "Nexus-Mods/vortex-parse-ini",
-    "react": "^15.3.2",
-    "react-bootstrap": "^0.30.6",
-    "react-dom": "^15.3.2",
+    "react": "^16.8.6",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.8.6",
     "react-i18next": "^1.10.1",
     "redux-act": "^1.7.3",
     "rm-local-modules": "^0.0.2",
-    "ts-loader": "2.3.4",
-    "webpack": "^3.7.1"
+    "ts-loader": "^5.3.3",
+    "vortex-api": "Nexus-Mods/vortex-api",
+    "vortex-parse-ini": "Nexus-Mods/vortex-parse-ini",
+    "webpack": "^4.29.6"
   }
 }
