--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./out/index.js",
   "repository": "",
   "scripts": {
-    "webpack": "webpack --config webpack.config.js --display-error-details --progress --profile --color",
+    "webpack": "webpack --config webpack.config.js --progress --profile --color",
     "clear": "rm-local-modules",
     "build": "npm run webpack && extractInfo"
   },
@@ -33,10 +33,10 @@
     "react-i18next": "^1.10.1",
     "redux-act": "^1.7.3",
     "rm-local-modules": "^0.0.2",
-    "ts-loader": "^5.3.3",
+    "ts-loader": "^9.4.2",
     "vortex-api": "Nexus-Mods/vortex-api",
     "vortex-parse-ini": "Nexus-Mods/vortex-parse-ini",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
